<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.languagecomputer</groupId>
    <artifactId>services-parent</artifactId>
    <version>250411.1-SNAPSHOT</version>
  </parent>
  <groupId>com.languagecomputer</groupId>
  <artifactId>docprocess</artifactId>
  <name>${project.artifactId}</name>
  <packaging>jar</packaging>

  <dependencies>
    <dependency>
      <groupId>com.languagecomputer</groupId>
      <artifactId>services-common</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.languagecomputer</groupId>
      <artifactId>job</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.languagecomputer</groupId>
      <artifactId>services-common</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.languagecomputer</groupId>
      <artifactId>examplestore</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>3.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- used for Rest Client creation -->
    <dependency>
      <groupId>com.languagecomputer</groupId>
      <artifactId>services-client</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- used for Job Arguments dependency for one of the test time code -->
    <dependency>
      <groupId>com.languagecomputer</groupId>
      <artifactId>job</artifactId>
      <version>${project.version}</version>
      <classifier>tests</classifier>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>

